# Advent-Of-Code

./: .gitignore  README.md  Taskfile.dist.yaml  Taskfile.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.py  ci.yml  ci_test.py  pysolve.py  reporting.py  solve_strategy.py
AoC0000/bad_day_00/golang/: main_test.go
AoC0000/bad_day_00/js/: solve.test.js
AoC0000/bad_day_00/python/: test_main.py
AoC0000/bad_day_00/rust/: main.rs
AoC0000/day_00/golang/: main_test.go
AoC0000/day_00/js/: index.js
AoC0000/day_00/python/: main.py  test_main.py
AoC0000/day_00/rust/: main.rs
AoC2022/day_01/python/: main.py  test_main.py
AoC2022/day_02/python/: main.py  test_main.py
AoC2022/day_03/python/: main.py  test_main.py
AoC2022/day_04/python/: main.py  test_main.py
AoC2022/day_05/python/: main.py  test_main.py
AoC2022/day_06/python/: main.py  test_main.py
AoC2022/day_07/python/: main.py  test_main.py
AoC2022/day_08/python/: main.py  test_main.py
AoC2022/day_09/python/: main.py  test_main.py
AoC2022/day_10/python/: main.py  test_main.py
AoC2022/day_11/python/: main.py  test_main.py
AoC2022/day_12/python/: main.py  test_main.py
AoC2022/day_13/python/: __init__.py  main.py  test_main.py
AoC2023/day_00/golang/: main.go  main_test.go
AoC2023/day_00/python/: main.py  test_main.py
images/golang/: Dockerfile  go.mod
images/java/: Dockerfile  pom.xml
images/js/: Dockerfile  jest.config.js  package-lock.json  package.json
images/kotlin/: Dockerfile  pom.xml
images/python/: Dockerfile  pyproject.toml
images/rust/: Dockerfile
(+58 files in other folders)
