[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Christopher Carroll <chris@carroll.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
numpy = ">=1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
